# fast-app

./: .gitignore  404.html  AGENTS.md  INSTALL.md  LICENSE  MANIFEST.in  README.md  index.html  mkdocs.yml  pyproject.toml  setup.py
.cursor/rules/: fast-app-package-development.mdc
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
api/: index.html
async_farm/: index.html
broadcast_events/: index.html
broadcasting/: index.html
cli/: index.html
context/: index.html
controller/: index.html
docs/: api.md  async_farm.md  broadcast_events.md  broadcasting.md  cli.md  context.md  controller.md  enviroment.md  events.md  factories.md  index.md  installation.md  integrations.md  localization.md  locks.md  middlewares.md  models.md  notifications.md  observers.md  policies.md  queue.md  quick_start.md  resources.md  rooms.md  routes.md  scheduler.md  schemas.md  storage.md
enviroment/: index.html
events/: index.html
factories/: index.html
fast_app/: __init__.py  app_provider.py  application.py  boot.py  config.py
fast_app/cli/: __init__.py  __main__.py  command_base.py  exec_command.py  init_command.py  main.py  make_command.py  migrate_command.py  publish_command.py  run_command.py  seed_command.py  serve_command.py  version_command.py  work_command.py
fast_app/contracts/: __init__.py  broadcast_channel.py  broadcast_event.py  command.py  event.py  event_listener.py  factory.py  middleware.py  migration.py  model.py  notification.py  notification_channel.py  observer.py  policy.py  resource.py  room.py  route.py  schema.py  seeder.py  storage_driver.py  validator_rule.py  websocket_event.py
fast_app/core/: __init__.py  api.py  broadcasting.py  cache.py  context.py  cron.py  events.py  jwt_auth.py  localization.py  lock.py  pydantic_types.py  pydentic_types.py  queue.py  scheduler.py  schema.py  simple_controller.py  stopwatch.py  storage.py
fast_app/database/: __init__.py  mongo.py
fast_app/decorators/: __init__.py  db_cache_decorator.py  deprecated_decorator.py  middleware_decorator.py  model_decorators.py  namespace_decorator.py  retry_decorator.py  singleton_decorator.py  stopwatch_decorator.py
fast_app/exceptions/: __init__.py  apple_auth_exceptions.py  auth_exceptions.py  common_exceptions.py  google_auth_exceptions.py  http_exceptions.py  model_exceptions.py
fast_app/utils/: __init__.py  api_filters.py  api_utils.py  async_farm_utils.py  broadcast_utils.py  database_cache.py  datetime_utils.py  env_utils.py  event_utils.py  file_utils.py  log_errors_checker.py  logging.py  model_resolver.py  model_utils.py  mongo_utils.py  path_resolver.py  query_builder.py  queue_utils.py  routing_utils.py  serialisation.py  socketio_mgr_singleton.py  versioned_cache.py
implementation_proposals/: socketio.md
installation/: index.html
integrations/: index.html
localization/: index.html
middlewares/: index.html
models/: index.html
notifications/: index.html
observers/: index.html
policies/: index.html
queue/: index.html
quick_start/: index.html
resources/: index.html
rooms/: index.html
routes/: index.html
scheduler/: index.html
schemas/: index.html
search/: search_index.json
storage/: index.html
tests/: __init__.py  conftest.py  test_async_farm_feature.py  test_async_farm_publisher.py  test_async_farm_task.py  test_async_farm_task_capture.py  test_async_farm_worker_unit.py  test_authorize_middleware.py  test_boot_autodiscovery.py  test_broadcasting.py  test_context.py  test_cron.py  test_db_cache_invalidation_after_update.py  test_etag_middleware.py  test_event_name.py  test_events_dispatch.py  test_factory.py  test_feature.py  test_filters_param.py  test_get_client_ip.py  test_jwt_auth.py  test_localization.py  test_log_watcher.py  test_logging_custom_name.py  test_mail_notification.py  test_make_command.py  test_model_binding_and_schema_injection.py  test_model_collection_naming.py  test_model_crud.py  test_model_relationship_keys.py  test_mongo_command_listener.py  test_objectid_json_schema.py  test_package.py  test_paginate_search.py  test_queue_utils_import.py  test_redis_lock.py  test_resource_nested.py  test_retry_decorator.py  test_route_resource.py  test_scheduler.py  (+8 more)
(+116 files in other folders)
